Iniciando o CSS utilizando variáveis

--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 <body>
   <header>
     <div class="container">
-      <h2>DIOFLIX</h2>
+      <h2 class="logo">DIOFLIX</h2>
       <nav>
         <a href="#">Início</a>
         <a href="#">Séries</a>
