--- a/index.html
+++ b/index.html
@@ -18,5 +18,20 @@
       </nav>
     </div>
   </header>
+
+  <main>
+    <div class="filme-principal">
+      <div class="container">
+        <h3 class="titulo">HOUSE OF CARDS</h3>
+        <p class="descricao">Nada pode impedir o político sem escrúpulos Frank Underwood de conquistar Washington. Assita agora a nova temporada de House of Cards que está imperdível</p>
+
+        <div class="botoes">
+          <button class="botao" role="button">ASSISTIR AGORA</button>
+          <button class="botao" role="button">MAIS INFORMAÇÃO</button>
+        </div>
+      </div>
+
+    </div>
+  </main>
 </body>
 </html>
