--- a/index.html
+++ b/index.html
@@ -26,12 +26,20 @@
         <p class="descricao">Nada pode impedir o político sem escrúpulos Frank Underwood de conquistar Washington. Assita agora a nova temporada de House of Cards que está imperdível</p>
 
         <div class="botoes">
-          <button class="botao" role="button">ASSISTIR AGORA</button>
-          <button class="botao" role="button">MAIS INFORMAÇÃO</button>
+          <button class="botao" role="button">
+            <i class="fas fa-play"></i>
+            ASSISTIR AGORA
+          </button>
+          <button class="botao" role="button">
+            <i class="fas fa-info-circle"></i>
+            MAIS INFORMAÇÃO
+          </button>
         </div>
       </div>
 
     </div>
   </main>
+
+  <script src="https://kit.fontawesome.com/2c36e9b7b1.js"></script>
 </body>
 </html>
