--- a/index.html
+++ b/index.html
@@ -19,12 +19,12 @@
 <body>
   <header>
     <div class="container">
-      <h2 class="logo">DIOFLIX</h2>
+      <h2 class="logo" onclick="informacao(11)">#DIOFLIX</h2>
       <nav>
-        <a href="#">Início</a>
-        <a href="#">Séries</a>
-        <a href="#">Filmes</a>
-        <a href="#">Documentários</a>
+        <a href="https://digitalinnovation.one/">Início</a>
+        <a href="https://github.com/felipeAguiarCode">Séries</a>
+        <a href="https://www.instagram.com/digitalinnovation.one/">Filmes</a>
+        <a href="https://www.linkedin.com/in/felipe-aguiar-047/">Documentários</a>
       </nav>
     </div>
   </header>
@@ -36,11 +36,11 @@
         <p class="descricao">Nada pode impedir o político sem escrúpulos Frank Underwood de conquistar Washington. Assita agora a nova temporada de House of Cards que está imperdível</p>
 
         <div class="botoes">
-          <button class="botao" role="button">
+          <button class="botao" role="button" onclick="window.open('https://www.youtube.com/watch?v=mpVD25j-LCo')">
             <i class="fas fa-play"></i>
             ASSISTIR AGORA
           </button>
-          <button class="botao" role="button">
+          <button class="botao" role="button" onclick="informacao(0)">
             <i class="fas fa-info-circle"></i>
             MAIS INFORMAÇÃO
           </button>
@@ -53,34 +53,34 @@
   <div class="carrossel-filmes">
     <div class="owl-carousel owl-theme">
       <div class="item">
-        <img class="box-filme" src="img/mini1.jpg" alt="">
+        <img class="box-filme" src="img/mini1.jpg" alt="" onclick="informacao(1)">
       </div>
       <div class="item">
-        <img class="box-filme" src="img/mini2.jpg" alt="">
+        <img class="box-filme" src="img/mini2.jpg" alt="" onclick="informacao(2)">
       </div>
       <div class="item">
-        <img class="box-filme" src="img/mini3.jpg" alt="">
+        <img class="box-filme" src="img/mini3.jpg" alt="" onclick="informacao(3)">
       </div>
       <div class="item">
-        <img class="box-filme" src="img/mini4.jpg" alt="">
+        <img class="box-filme" src="img/mini4.jpg" alt="" onclick="informacao(4)">
       </div>
       <div class="item">
-        <img class="box-filme" src="img/mini5.jpg" alt="">
+        <img class="box-filme" src="img/mini5.jpg" alt="" onclick="informacao(5)">
       </div>
       <div class="item">
-        <img class="box-filme" src="img/mini6.jpg" alt="">
+        <img class="box-filme" src="img/mini6.jpg" alt="" onclick="informacao(6)">
       </div>
       <div class="item">
-        <img class="box-filme" src="img/mini7.jpg" alt="">
+        <img class="box-filme" src="img/mini7.jpg" alt="" onclick="informacao(7)">
       </div>
       <div class="item">
-        <img class="box-filme" src="img/mini8.jpg" alt="">
+        <img class="box-filme" src="img/mini8.jpg" alt="" onclick="informacao(8)">
       </div>
       <div class="item">
-        <img class="box-filme" src="img/mini9.jpg" alt="">
+        <img class="box-filme" src="img/mini9.jpg" alt="" onclick="informacao(9)">
       </div>
       <div class="item">
-        <img class="box-filme" src="img/mini10.jpg" alt="">
+        <img class="box-filme" src="img/mini10.jpg" alt="" onclick="informacao(10)">
       </div>
     </div>
   </div>
@@ -89,5 +89,6 @@
   <script src="js/owl/jquery.min.js"></script>
   <script src="js/owl/owl.carousel.min.js"></script>
   <script src="js/owl/setup.js"></script>
+  <script src="js/main.js"></script>
 </body>
 </html>
